--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Sorry dass ich dir das repo zuspamme :)
+
 This is a list (not exhaustive) of some of the stuff to cleanup/fix.
 
 If you're interested in hacking on any of these, please contact the list first
